--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*Personalizacion*/
+:root {
+ --Text-Primario: 'Oswald', sans-serif;  
+ }
+
 /* Sobre el nav, le dimos un display flex y este ya coloca las cajas una alado de la otra, con justify content le señalamos como queremos que las separe, en este caso yo quería que este pegado un contenedor al costado izquierdo, y el otro al costado derecho (cabe aclarar que si le agregamos otro div más, este estara en la mitad, ya que es la medida que el toma) */
 body{
 background-color: #74b9ff54;
@@ -333,6 +338,10 @@ ul {
   align-items: center;
 	background-color: #e97d68;
 }
+.Link-Footer {
+display: contents;
+}
+
 .formulario label  {
   color: black;
   font-weight: 900;
@@ -352,6 +361,13 @@ border:  7px double;
   font-size: xx-large;
 }
 
+.Titulo-vuelos  {
+  display: flex;
+  justify-content: center;
+  font-family: var(--Text-Primario);
+  
+}
+
 .Opciones-internacionales {
   width: 100%;
   display: flex;
@@ -361,11 +377,25 @@ border:  7px double;
 }
 
 .irlanda , .london , .cuba , .inglaterra {
-height: 500px;
+height: 359px;
 background-color:white;
 }
-
+ 
+.rectangle {
+  width: 100%;
+  height: 5%;
+  background-color: grey;
+  margin-top: 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
+.price {
+  margin-top: 10%;
+  margin-left: 24%;
+  font-size: 224%;
+}
+
 .irlanda:hover {
   box-shadow: -13px -12px 36px 9px rgba(0,0,0,0.75);
   -webkit-box-shadow: -13px -12px 36px 9px rgba(0,0,0,0.75);
@@ -426,3 +456,15 @@ background-color:white;
   .container_form {
  top: 0%;
   }
+
+  @media screen and (max-width: 750px) {
+   .irlanda , .london , .cuba , .inglaterra {
+     margin-top: 14%  }
+   
+     @media screen and (max-width: 750px) {
+     .fa-brands , .fa-solid {
+      font-size: larger;
+      gap: 60%;
+      margin: 16% 0% 14% 0%;
+      display: block;
+     }
