--- a/style.css
+++ b/style.css
@@ -42,10 +42,11 @@ width: 3%;
 
 .container-slider {
   width: 90%;
-  max-width: 900px;
-  margin: -535px auto auto 45%;
+  max-width: 1326px;
+  margin: -478px auto auto 23%;
   overflow: hidden;
   box-shadow: 0 0 0 10px #fff, 0 15px 50px;
+ height: 68%;
   position: relative;
 }
 .slider {
@@ -61,6 +62,8 @@ width: 3%;
   display: block;
   width: 100%;
   height: 400px;
+  object-fit: cover;
+  height: 119%;
   object-fit: cover;
 }
 .slider__btn {
@@ -84,6 +87,7 @@ width: 3%;
 /* Al logo le doy un margen (una separacion) de 20px a la izquierda */
 .logo {
   margin-left: 20px;
+  
 }
 /* A los items le doy un margen (una separacion) de 30px a la derecha */
 .items {
@@ -101,10 +105,16 @@ width: 3%;
 	height: 600px;
 	display: flex;
   }
+
 .container_form {
-	width: 30%;
+	width: 19%;
 	z-index: 1;
-top: 22%
+top: 22%;
+height: 62%;
+box-shadow: 6px -4px 10px 2px rgba(8,7,7,0.65);
+-webkit-box-shadow: 6px -4px 10px 2px rgba(8,7,7,0.65);
+-moz-box-shadow: 6px -4px 10px 2px rgba(8,7,7,0.65);
+margin-left: 1%;
   }
 
 .boton-1 {
@@ -122,8 +132,10 @@ top: 22%
 .formulario {
   display: grid;
   padding-left: 1%;
-  gap: 9%;
+  gap: 5%;
+  align-items: center;
 }
+
 .background {
   position: absolute;
   width: 100%;
@@ -135,11 +147,6 @@ top: 22%
   font-family: var( --text-secundario);
 }
 
-.bg-form {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 
 /*/////////////////////////////////////////*/
 
@@ -360,8 +367,10 @@ display: contents;
 
 .formulario input{
 border:  none;
-
+border: groove;
+border-color: lightblue;
 height: 200%;
+width: 85%;
 }
 
 .fa-solid  {
@@ -468,6 +477,7 @@ background-color:white;
 @media screen and (max-width: 700px) {
   .container_form {
  top: 0%;
+ 
   }
 
   @media screen and (max-width: 750px) {
